# ortensia-backtest-api

./: .gitignore  pyproject.toml
src/: backtest.py  calc.py  gen_module.py  genetic.py  module.py  screener.py  selection.py  setup.py
